--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -26,7 +26,7 @@
     font-size: 3rem;
     text-align: center;
     margin-bottom: 1rem;
-    @include mq-tablet-portrait-up {
+    @include mq-tablet-landscape-up {
       margin-top: 2rem;
       margin-bottom: 2rem;
     }
@@ -51,7 +51,7 @@
     align-items: flex-start;
   }
 
-  @include mq-tablet-portrait-up {
+  @include mq-tablet-landscape-up {
     padding-top: $top-header;
     .title {
       font-size: 5rem;
